--- a/Users/templates/Users/password_reset_confirm.html
+++ b/Users/templates/Users/password_reset_confirm.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     {% if  form == None %}
         <link rel="stylesheet" href="{%static '/CSS/error400Styles.css'%}">
     {%else%}
