Add new styles for password reset completion and done pages; update HTML templates for improved user experience

--- a/Users/static/CSS/error400Styles.css
+++ b/Users/static/CSS/error400Styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: 100dvh;
     font-family: "Montserrat";
     background-color: #18233f;
     color: #fff;
