--- a/Users/templates/Users/password_reset_complete.html
+++ b/Users/templates/Users/password_reset_complete.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{%static '/CSS/passwordResetCompleteStyles.css'%}">
     <title>Contraseña cambiada</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Confirmación contraseña cambiada Log Inventory">
@@ -12,6 +14,6 @@
 </head>
 <body>
     <h1>Contraseña cambiada con éxito</h1>
-    <a href="{% url 'authenticate' type='deactivate' %}">Iniciar sesión</a>
+    <a href="{% url 'authenticate' type='deactivate' %}"><span class="material-symbols-outlined">arrow_back</span>Iniciar sesión</a>
 </body>
 </html>
