--- a/Users/templates/Users/password_reset_done.html
+++ b/Users/templates/Users/password_reset_done.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{%static '/CSS/passwordResetDoneStyles.css'%}">
     <title>Correo enviado</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
     <meta name="description" content="Envio correo recuperación contraseña Log Inventory">
@@ -11,6 +13,11 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
+    <div class="home-link__container"> 
+        <a title="Volver al home" class="home-link" href="{% url 'home' %}">
+            <span class="material-symbols-outlined">arrow_back</span>
+        </a>
+    </div>
     <h1>¡Correo electrónico enviado con éxito!</h1>
 </body>
-</html>
+</html> 
