Enhance password reset completion page styles; add icon to header and adjust CSS for better responsiveness

--- a/Users/static/CSS/passwordResetDoneStyles.css
+++ b/Users/static/CSS/passwordResetDoneStyles.css
@@ -31,13 +31,19 @@ nav {
     transition: filter .3s;
 }
 
-.material-symbols-outlined:hover {
+a .material-symbols-outlined:hover {
     filter: drop-shadow(0 0 5px #fff);
 }
 
 h1 {
     padding-top: 5vh;
     font-size: 3rem;
+}
+
+h1 .material-symbols-outlined {
+    font-size: 3rem;
+    position: relative;
+    top: 0.5rem;
 }
 
 @media (max-width: 768px) {
@@ -49,5 +55,9 @@ h1 {
         width: 90%;
         padding: 5%;
         font-size: 2rem;
+    }
+
+    h1 .material-symbols-outlined {
+        display: none;
     }
 }
