--- a/Users/templates/Users/password_reset_done.html
+++ b/Users/templates/Users/password_reset_done.html
@@ -18,6 +18,6 @@
             <span class="material-symbols-outlined">arrow_back</span>
         </a>
     </div>
-    <h1>¡Correo electrónico enviado con éxito!</h1>
+    <h1>¡Correo electrónico enviado con éxito!<span class="material-symbols-outlined">mark_email_read</span></h1>
 </body>
 </html> 
