--- a/Users/templates/Users/error_404.html
+++ b/Users/templates/Users/error_404.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{%static '/CSS/error404Styles.css'%}">
+    <link rel="stylesheet" href="{% static '/CSS/error404Styles.css' %}">
     <title>Error 404</title>
-    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <link rel="icon" href="{% static '/IMAGES/LogoMini.webp' %}" type="image/webp">
     <meta name="description" content="Error 404 Log Inventory">
     <meta name="author" content="Log Inventory">
     <meta name="robots" content="noindex, nofollow">
@@ -17,11 +17,11 @@
             Error 404
         </h1>
         <div class="typewritter">
-            <p>Objeto no encontrado.</p>
+            <p>La solicitud no deuelve ningún valor encontrado.</p>
         </div>
     </div>
     <div class="image__container">
-        <img src="../static/IMAGES/mini-totoros.webp" alt="mini-totoros">
+        <img src="{% static '/IMAGES/mini-totoros.webp' %}" alt="mini-totoros">
     </div>
 </body>
 </html>
