--- a/Users/static/CSS/passwordResetStyles.css
+++ b/Users/static/CSS/passwordResetStyles.css
@@ -19,6 +19,28 @@ body {
     font-family: Montserrat;
 }
 
+nav { 
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.home-link__container  a {
+    color: var(--bg-color);
+}
+
+.material-symbols-outlined {
+    font-size: 2.5rem;
+    font-weight: bolder;
+    margin: 10px 15px;
+    transition: filter .3s;
+}
+
+.material-symbols-outlined:hover {
+    filter: drop-shadow(0 0 5px #fff);
+}
+
+
 main {
     display: flex;
     flex-direction: row;
