--- a/Users/templates/Users/change_password.html
+++ b/Users/templates/Users/change_password.html
@@ -4,9 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{%static '/CSS/passwordResetStyles.css'%}">
     <title>Cambiar Contraseña</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Cambio contraseña recuperación cuenta Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
+    <nav>
+        <div class="home-link__container"> 
+            <a title="Volver al home" class="home-link" href="{% url 'main' %}">
+                <span class="material-symbols-outlined">arrow_back</span>
+            </a>
+        </div>
+    </nav>
     <main>
         <div class="info">
             <h1>¡Casi listo!</h1>
@@ -25,5 +38,5 @@
             <input type="submit" value="Cambiar Contraseña">
         </form> 
     </main>
-</body>
+</body> 
 </html>
