Add profile image upload script and update profile template

--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -91,7 +91,7 @@
             
             <form method="POST">
                 {% csrf_token %}
-
+                
                 <div>
                     <p>
                         {{message}}
@@ -115,5 +115,6 @@
         </div>
     </main>
     <script src="{%static '/SCRIPTS/mainScript.js'%}"></script>
+    <script src="{%static '/SCRIPTS/profileScript.js'%}"></script>
 </body>
 </html>
