--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -113,12 +113,12 @@
                 </div>
                 <div>
                     <label for="id_username">Nombre de Usuario:</label>
-                    {{form.errors.username}}
+                    {{form_post.errors.username}}
                     {{form.username}}
                 </div>
                 <div>
                     <label for="id_email">Correo Electrónico:</label>
-                    {{form.errors.email}}
+                    {{form_post.errors.email}}
                     {{form.email}}
                 </div>
                 <dialog id="modify-confirmation">
@@ -133,9 +133,9 @@
                 </dialog>
                 <div class="modify-password">
                     <label for="password_id">Contraseña</label>
+                    {{form_post.errors.password}}
                     <div>
                         <input type='password' name='password_support' id="password_id_support"  placeholder='Password' disabled value='password'>
-                        {{form.errros.password}}
                         <a title="Cambiar Contraseña" href="{% url 'change_password' %}"><span class="material-symbols-outlined">edit</span></a>
                     </div>
                 </div>
