--- a/Users/templates/Users/main.html
+++ b/Users/templates/Users/main.html
@@ -59,7 +59,7 @@
                 <li class="sidebar__item">
                     <a href="{% url 'profile' user.username %}" class="item--profile sidebar__item-link">
                         <img src="../../../media/{{user.profile.image}}" alt="profile-img">
-                        <span class="profile-option">{{user.username}}</span>
+                        <span id="username" class="profile-option">{{user.username}}</span>
                     </a>
                 </li>
                 <li class="sidebar__item">
@@ -89,6 +89,6 @@
         <div class="objects-area">
         </div>
     </main>
-    <script src="{%static '/SCRIPTS/mainScript.js'%}"></script>
+    <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
 </body>
 </html>
