--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -58,7 +58,7 @@
                 <li class="sidebar__item">
                     <a href="{% url 'profile' user.username %}" class="item--profile sidebar__item-link">
                         <img src="../../../media/{{user.profile.image}}" alt="profile-img">
-                        <span class="profile-option">{{user.username}}</span>
+                        <span id="username"  class="profile-option">{{user.username}}</span>
                     </a>
                 </li>
                 <li class="sidebar__item">
@@ -144,7 +144,7 @@
             </form>
         </div>
     </main>
-    <script src="{%static '/SCRIPTS/mainScript.js'%}"></script>
+    <script src="{%static '/SCRIPTS/sidebarScript.js'%}"></script>
     <script src="{%static '/SCRIPTS/profileScript.js'%}"></script>
 </body>
 </html>
