--- a/Users/templates/Users/main.html
+++ b/Users/templates/Users/main.html
@@ -65,7 +65,7 @@
                 <li class="sidebar__item">
                     <a href="{% url 'logout' %}" class="sidebar__item-link">
                         <span class="material-symbols-outlined">Logout</span>
-                        <p>Logout</p>
+                        <p>Cerrar Sesión</p>
                     </a>   
                 </li>
             </ul>
