--- a/Users/templates/Users/subusers.html
+++ b/Users/templates/Users/subusers.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>crear subusuario</p>
-    <input type="checkbox" {{checked}} id="create-subuser" onclick="inputClick()">
+    <input type="checkbox" {{checked}} id="create-subuser">
     <p>
         crear grupo
     </p>
@@ -17,7 +17,8 @@
     <form class="create-subuser" id='form-subuser' method="POST">
         {% csrf_token %}
         {{form}}
-        <input type="submit" value="Crear Usuario" id="open-dialog">
+        <input type="button" value="Crear Usuario" id="open-dialog">
+        <input type="submit" hidden id="submit">
     </form>
     <form class="create-group" method="POST">
         {% csrf_token %}
