Enhance subuser management: add username and group display, improve validation, and link user to subprofiles

--- a/Users/templates/Users/subusers.html
+++ b/Users/templates/Users/subusers.html
@@ -30,6 +30,14 @@
         <button value=0 id="close-dialog">No</button>
         <button value=1 id="create">Si</button>
     </dialog>
+    <section>
+        {% for subuser in subusers %}
+        <ul>
+            <li>{{subuser.username}}</li>
+            <li>{{subuser.group.name}}</li>
+        </ul>
+        {% endfor %}
+    </section>
     <script src="{%static '/SCRIPTS/subusersScript.js'%}"></script>
 </body>
 </html>
