Add sidebar component and refactor user templates; enhance layout and styles

--- a/Users/static/CSS/subusersStyles.css
+++ b/Users/static/CSS/subusersStyles.css
@@ -13,4 +13,13 @@
 
 #create-group:checked ~ .create-group {
     display: block;
+}   
+
+main {
+    height: 100dvh;
+    width: clamp(calc(100dvw - 300px), 80dvw, calc(100dvw - 220px));
+    background-color: var(--bg-color);
+    position: fixed;
+    right: 0;
 }
+
