--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
     <link rel="stylesheet" href="{%static '/CSS/profileStyles.css'%}">
     <title>Perfil</title>
     <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
@@ -13,63 +14,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <aside class="sidebar">
-        <form class="sidebar__form">
-            <input type="checkbox" id="open-menu">
-            <label class="material-symbols-outlined close-menu" for="open-menu">chevron_left</label>
-            <label class="material-symbols-outlined open-menu" for="open-menu">chevron_right</label>
-        </form>
-        <nav class="sidebar__nav">
-            <ul>
-                <li class="sidebar__item">
-                    <a href="{% url 'main' %}" class="sidebar__item-link">
-                        <span class="material-symbols-outlined">view_object_track</span>
-                        <p>Objetos</p>
-                    </a>
-                </li>
-                <li class="sidebar__item">
-                    <a href="#" class="sidebar__item-link">
-                        <span class="material-symbols-outlined">add</span>
-                        <p>Crear</p>
-                    </a>
-                </li>
-                <li class="sidebar__item">
-                    <a href="#" class="sidebar__item-link">
-                        <span class="material-symbols-outlined">partner_exchange</span>
-                        <p>Prestamos</p>
-                    </a>
-                </li>
-                <li class="sidebar__item">
-                    <a href="#" class="sidebar__item-link">
-                        <span class="material-symbols-outlined">event_note</span>
-                        <p>Transacciones</p>
-                    </a>
-                </li>
-                <li class="sidebar__item">
-                    <a href="{% url 'manage_subusers' %}" class="sidebar__item-link">
-                        <span class="material-symbols-outlined">groups</span>
-                        <p>Usuarios</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div class="sidebar__profile">
-            <ul>
-                <li class="sidebar__item">
-                    <a href="{% url 'profile' user.username %}" class="item--profile sidebar__item-link">
-                        <img src="../../../media/{{user.profile.image}}" alt="profile-img">
-                        <span id="username"  class="profile-option">{{user.username}}</span>
-                    </a>
-                </li>
-                <li class="sidebar__item">
-                    <a href="{% url 'logout' %}" class="sidebar__item-link">
-                        <span class="material-symbols-outlined">Logout</span>
-                        <p>Logout</p>
-                    </a>   
-                </li>
-            </ul>
-        </div>
-    </aside>
+    {% include 'Users/sideBar.html' %}
     <main>
         <div class="filter-bar"> 
             <div class="filter-bar__filter-container">
