--- a/Users/templates/Users/subusers.html
+++ b/Users/templates/Users/subusers.html
@@ -1,44 +1,55 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static '/CSS/subusersStyles.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="{%static '/CSS/sideBarStyles.css'%}">
+    <link rel="stylesheet" href="{% static '/CSS/subUsersStyles.css' %}">
     <title>Manejo de Usuarios</title>
+    <link rel="icon" href="{%static '/IMAGES/LogoMini.webp'%}" type="image/webp">
+    <meta name="description" content="Subusers Log Inventory">
+    <meta name="author" content="Log Inventory">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <p>crear subusuario</p>
-    <input type="checkbox" {{checked}} id="create-subuser">
-    <p>
-        crear grupo
-    </p>
-    <input type="checkbox" {{checked_group}} id="create-group">
-    <form class="create-subuser" id='form-subuser' method="POST">
-        {% csrf_token %}
-        {{form}}
-        <input type="button" value="Crear Usuario" id="open-dialog">
-        <input type="submit" hidden id="submit">
-    </form>
-    <form class="create-group" method="POST">
-        {% csrf_token %}
-        {{group_form}}
-        <input type="submit" value="Crear Grupo">
-    </form>
-    <dialog id="group-dialog">
-        <p>Para poder crear un usuario necesita un grupo primero, ¿Desea crear un grupo?</p>
-        <button value=0 id="close-dialog">No</button>
-        <button value=1 id="create">Si</button>
-    </dialog>
-    <section>
-        {% for subuser in subusers %}
-        <ul>
-            <li>Nombre: {{subuser.username}}</li>
-            <li>Email: {{subuser.email}}</li>
-            <li>Grupo: {{subuser.group.name}}</li>
-        </ul>
-        {% endfor %}
-    </section>
+    {% include 'Users/sideBar.html' %}
+    <main>
+        <div>
+            <p>crear subusuario</p> 
+            <input type="checkbox" {{checked}} id="create-subuser">
+            <form class="create-subuser" id='form-subuser' method="POST">
+                {% csrf_token %}
+                {{form}}
+                <input type="button" value="Crear Usuario" id="open-dialog">
+                <input type="submit" hidden id="submit">
+            </form>
+        </div>
+        <div>
+            <p>crear grupo</p>
+            <input type="checkbox" {{checked_group}} id="create-group">
+            <form class="create-group" method="POST">
+                {% csrf_token %}
+                {{group_form}}
+                <input type="submit" value="Crear Grupo">
+            </form>
+        </div>
+        <dialog id="group-dialog">
+            <p>Para poder crear un usuario necesita un grupo primero, ¿Desea crear un grupo?</p>
+            <button value=0 id="close-dialog">No</button>
+            <button value=1 id="create">Si</button>
+        </dialog>
+        <div class="subusers-list">
+            {% for subuser in subusers %}
+            <ul>
+                <li>{{subuser.username}}</li>
+                <li>{{subuser.group.name}}</li>
+                <li>{{subuser.email}}</li>
+            </ul>
+            {% endfor %}
+        </div>
+    </main>
     <script src="{%static '/SCRIPTS/subusersScript.js'%}"></script>
 </body>
 </html>
