--- a/Users/static/CSS/subusersStyles.css
+++ b/Users/static/CSS/subusersStyles.css
@@ -1,19 +1,21 @@
-.create-subuser{
-    display: none;
+* {
+    box-sizing: border-box;
 }
 
-.create-group {
-    display: none;
+body, div, ul, li, a, h1, h2, h3, h4, p {
+    margin: 0;
+    padding: 0;
 }
 
-
-#create-subuser:checked ~ .create-subuser {
-    display: block;
+body {
+    --bg-color: #fff;
+    --sidebar-color: color-mix(in srgb, #000 25%, #fff);
+    --dark-color: #222;
+    --fb-color: #003366;
+    --wood: #8B5E3C; 
+    background-color: var(--bg-color);
+    font-family: Montserrat;
 }
-
-#create-group:checked ~ .create-group {
-    display: block;
-}   
 
 main {
     height: 100dvh;
@@ -23,3 +25,107 @@ main {
     right: 0;
 }
 
+aside:has(input[type="checkbox"]:checked) ~ main {
+    width: calc(100dvw - 62px);
+}
+
+.filter-bar {
+    width: 100%;
+    height: calc(2rem + 44.78px);
+    background-color: var(--fb-color);
+    container-name: filter-bar;
+}
+
+.filter-bar__filter-container {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.filter-bar__filter-container > p {
+    max-width: clamp(100% - 42px, 100% - calc(28dvh - 5px), 100% - 210px);
+    height: 100%;
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+    color: var(--bg-color);
+    font-size: 1.8rem;
+    letter-spacing: 2px;
+}
+
+.filter-bar__filter-container > .filter-bar__logo-container {
+    height: 100%;
+    padding-right: .75rem;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.create-subuser{
+    display: none;
+}
+
+.create-group {
+    display: none;
+}
+
+.logo {
+    height: clamp(15px, calc(10dvh - 5px), 75px);
+    width: clamp(42px, calc(28dvh - 5px), 210px);
+    margin: 2.5px 0px;
+}
+
+.subusers-table__container {
+    height: 100%;
+    width: 100%;
+    height: calc(100% - calc(2rem + 44.78px) - 4.2rem);
+    overflow-y: auto;
+}
+
+.subusers-table {
+    width: 100%;
+}
+
+.subusers-table td, .subusers-table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+.subusers-table tr:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+}
+
+.subusers-table tr:first-child:hover {
+    background-color: #fff;
+    cursor: default;
+}
+
+.subusers-tools {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 4.2rem;
+    background-color: #335a94;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.subusers-tools label {
+    color: #fff;
+    font-size: 1.8rem;
+    cursor: pointer;
+}
+
+#create-subuser:checked ~ .create-subuser, #create-group:checked ~ .create-group {
+    display: block;
+}
+
+@media (max-width: 768px) {
+    .sidebar__form, .filter-bar__filter-container > .filter-bar__logo-container {
+        display: none;
+    }
+}
