Creating vairbales to define button of sidebar (create, objects)

--- a/Users/templates/Users/main.html
+++ b/Users/templates/Users/main.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' %}
+    {% include 'Users/sideBar.html' with path='main' %}
     <main> 
         <div class="filter-bar container"> 
             <div class="filter-bar__filter-container row">
