--- a/Users/templates/Users/profile.html
+++ b/Users/templates/Users/profile.html
@@ -14,7 +14,7 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    {% include 'Users/sideBar.html' %}
+    {% include 'Users/sideBar.html' with path='profile'%}
     <main>
         <div class="filter-bar"> 
             <div class="filter-bar__filter-container">
