Change Subprofile model, edit functions to create group of subusers, and create subprofiles, fix rows repeated on databs.

--- a/Users/templates/Users/subusers.html
+++ b/Users/templates/Users/subusers.html
@@ -32,10 +32,10 @@
                     <th>Correo</th>
                 </tr>
                 {% for subuser in subusers %}
-                <tr onclick="window.location.href='/manage_users/{{ subuser.id }}';">
-                    <td>{{subuser.username}}</td>
+                <tr onclick="window.location.href='/manage_users/{{ subuser.user.username }}';">
+                    <td>{{subuser.user.username}}</td>
                     <td>{{subuser.group.name}}</td>
-                    <td>{{subuser.email}}</td>
+                    <td>{{subuser.user.email}}</td>
                 </tr>
                 {% endfor %}
             </table>
